removes the min-width property from images to prevent stretching
issue #3

--- a/_sass/docs.scss
+++ b/_sass/docs.scss
@@ -56,7 +56,6 @@
 
     img {
       max-width: 100%;
-      min-width: 400px;
     }
     max-height: calc(100vh - 60px);
     overflow-y: scroll;
